# simrecon

./: .gitignore  README.md  README.txt  build.sh  gpl.txt  license.txt  mit.txt  requirements.txt
docs/: build_process.md  definitions.md  documentation.md  implementation_notes.md  implementation_notes_c.md  implementation_notes_python.md  input_parameters.md  requirements.txt  running_the_code.md
legacy build/: Makefile  README.txt  driftcorr.sh  recon2D.com  recon3D.com
notebooks/: 3D SIM reconstruction TEMPLATE.ipynb  3D SIM reconstruction TEMPLATE_KEEP ORDER 2.ipynb  3D SIM reconstruction TEMPLATE_NO FILTER OVERLAPS.ipynb  3D SIM reconstruction TEMPLATE_OIRIGNAL SIMRECON.ipynb  3D SIM reconstruction notebook template .ipynb  3D SIM reconstruction notebook template.ipynb  OTF generation template.ipynb  install.ipynb
notebooks/analysis/: explore_otf.ipynb  explore_overlaps.ipynb  explore_raw.ipynb  explore_reconstructed copy.ipynb  explore_reconstructed.ipynb  explore_roi.ipynb  explore_separated.ipynb  explore_tile_params.ipynb  points_restored.npy  simple_simrecon.ipynb  simple_simrecon_tiled.ipynb  visualize_beads.ipynb
notebooks/processing/: apodization.ipynb  create_3D_PSF.ipynb  crop_mrc.ipynb  simple_simrecon.ipynb
notebooks/sandbox/: prepareforopen3DSIM.ipynb  richardson_lucy_order0.ipynb  scratch_pad.ipynb  wiener_test.ipynb
python/simreconpython/: dims_helper.py  fft_helper.py  otf_helper.py  separate.py
python/simreconpythontests/: explore_reconstructed.py  illumination vector testing.py  psf_and_parameter_testing 560 beads.py  psf_and_parameter_testing copy 2.py  psf_and_parameter_testing copy.py  psf_and_parameter_testing final.py  psf_and_parameter_testing fine tuning.py  psf_and_parameter_testing.py  test_separate.py
scripts/Scripts/: simrecon_utils.py
scripts/Scripts/peaks/: _version.py  peakfinder.py  stackanalysis.py
scripts/dphutils/: __init__.py
src/: CMakeLists.txt  drift_n_phasestep.c  helpers.c  mainfile.c  radialft.cpp  radialft2d_Hesper.c  sirecon.c  sirecon.h  small_math_funcs.c  tiffhandle.cpp  wiener2d.c
test_data/: raw_adjusted.dv
